<?xml version="1.0" encoding="utf-8"?>
<androidx.drawerlayout.widget.DrawerLayout xmlns:android="http://schemas.android.com/apk/res/android"
xmlns:tools="http://schemas.android.com/tools"
android:id="@+id/drawer_layout"
android:layout_width="match_parent"
android:layout_height="match_parent"
android:fitsSystemWindows="true"
tools:openDrawer="start">

<include
    android:id="@+id/app"
    layout="@layout/home_content"
    android:layout_width="match_parent"
    android:layout_height="match_parent" />

<com.google.android.material.navigation.NavigationView
    android:id="@+id/navView"
    android:layout_width="wrap_content"
    android:layout_height="match_parent"
    android:layout_gravity="start">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <include
            android:id="@+id/layout_header"
            layout="@layout/nav_header_main" />

        <TextView
            android:id="@+id/btn_check_validation"
            style="@style/SettingsButton"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/settings_validation" />

        <TextView
            android:id="@+id/btn_add_selfie"
            style="@style/SettingsButton"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/settings_selfie" />

        <TextView
            android:id="@+id/btn_add_license"
            style="@style/SettingsButton"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/settings_license" />

        <TextView
            android:id="@+id/btn_add_passport"
            style="@style/SettingsButton"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/settings_passport" />

    </LinearLayout>

</com.google.android.material.navigation.NavigationView>

</androidx.drawerlayout.widget.DrawerLayout>