<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:background="@drawable/shape_dialog"
    android:orientation="vertical"
    android:paddingVertical="16dp"
    android:weightSum="4">

    <TextView
        android:id="@+id/txt_title"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginHorizontal="16dp"
        android:text="@string/manual_code_title"
        android:textSize="18sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <EditText
        android:id="@+id/edt_code"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginHorizontal="16dp"
        android:layout_marginTop="16dp"
        android:layout_weight="1"
        android:background="@drawable/shape_bordered"
        android:hint="@string/manual_code_enter"
        android:inputType="number"

        android:maxLength="12"
        android:padding="8dp"
        android:textAlignment="center"
        android:textSize="18sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/txt_title" />

    <Button
        android:id="@+id/btn_verify"
        style="@style/Widget.AppCompat.Button.Colored"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginHorizontal="12dp"
        android:layout_marginTop="16dp"
        android:layout_weight="1"
        android:enabled="false"
        android:text="@string/manual_code_verify"
        android:theme="@style/GreenButton"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/edt_code" />

    <Button
        android:id="@+id/btn_cancel"
        android:layout_width="match_parent"

        android:layout_height="match_parent"
        android:layout_marginHorizontal="16dp"
        android:layout_weight="1"
        android:background="@android:color/transparent"
        android:text="@string/manual_code_cancel"
        android:textAllCaps="false"
        android:textColor="@android:color/holo_red_dark"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/btn_verify" />

</LinearLayout>